tests/ui/traits/const-traits/call-generic-method-fail.stderr
error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/call-generic-method-fail.rs:6:5
   |
LL |     *t == *t
   |     ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | pub const fn equals_self<T: PartialEq + ~const std::cmp::PartialEq>(t: &T) -> bool {
   |                                       ++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
