tests/ui/traits/const-traits/call-generic-method-fail.rs
//@ compile-flags: -Znext-solver
#![allow(incomplete_features)]
#![feature(const_trait_impl, effects)]

pub const fn equals_self<T: PartialEq>(t: &T) -> bool {
    *t == *t
    //~^ ERROR cannot call non-const operator in constant functions
}

fn main() {}
